# aazuspan.github.io

./: .gitignore  Makefile  pelicanconf.py  publishconf.py  pyproject.toml
content/: cellular_flood.md  dithering.md  gol.md  minifying-modules.md  nested-modules.md  terrain_from_scratch.ipynb
content/code/: minified_data.ipynb  module_download_times.csv  nested_modules.ipynb
content/pages/: about.md
output/: index.html  terrain-from-scratch.html
output/author/: aaron-zuspan.html
output/category/: algorithms.html
output/tag/: algorithms.html  python.html  terrain.html
