[tool.poetry]
name = "aazuspan.github.io"
version = "0.1.0"
description = ""
authors = ["Aaron Zuspan <aa.zuspan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4"
Markdown = "^3.3.6"
ipykernel = "^6.15.1"
pelican-jupyter = "^0.10.1"
ipython_genutils = "^0.2.0"
Jinja2 = "<=3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
